<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        tools:context=".ui.onboarding.OnboardingFragment">


        <ImageView
            android:id="@+id/imageOnboarding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/sign_up_bg" />

        <androidx.cardview.widget.CardView
            android:id="@+id/bottomCard"
            style="@style/OnboardingCardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="45dp">

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/OnboardingTitleTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/welcome_back"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tvSubtitle"
                    style="@style/OnboardingSubtitleTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sign_in_desc"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/space5">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextView_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/space3"
                        android:layout_marginRight="@dimen/space3"
                        android:layout_marginBottom="@dimen/space2"
                        android:fontFamily="@font/outfit_semibold"
                        android:text="@string/phone_number_input"
                        android:textColor="@color/black_cole"
                        android:textSize="@dimen/text8" />


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etPhone"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_border"
                        android:digits="0123456789"
                        android:hint="@string/phone_number_hint"
                        android:inputType="number"
                        android:maxLength="10"
                        android:padding="@dimen/space8"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray_sub" />
                </LinearLayout>



                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignin"
                    style="@style/ButtonFilled"
                    android:layout_marginTop="10dp"
                    android:text="@string/send_otp"  />





                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_already_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/splinesans_regular"
                        android:gravity="center"
                        android:text="@string/dont_have_account"
                        android:textAlignment="center"
                        android:textColor="@color/gray_sub"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:fontFamily="@font/splinesans_regular"
                        android:gravity="center"
                        android:text="@string/sign_up"
                        android:textAlignment="center"
                        android:textColor="@color/royal_blue"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</layout>